# vibe-coding-rings-rust

./: Cargo.toml  Info.plist  Makefile  README.md
src/: config.rs  data_collector.rs  main.rs  menubar.rs  providers.rs  server.rs
