[package]
name = "vibe-coding-rings"
version = "1.1.0"
edition = "2021"
description = "AI Coding Agent Activity Rings Dashboard"

[dependencies]
# Web server
axum = "0.8"
tokio = { version = "1", features = ["full"] }
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# macOS native menubar
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
    "NSArray",
    "NSGeometry",
    "NSString",
    "NSThread",
    "NSValue",
    "NSRange",
    "NSDictionary",
] }
objc2-app-kit = { version = "0.3", features = [
    "NSApplication",
    "NSBezierPath",
    "NSButton",
    "NSColor",
    "NSEvent",
    "NSImage",
    "NSMenu",
    "NSMenuItem",
    "NSResponder",
    "NSStatusBar",
    "NSStatusItem",
    "NSView",
    "NSWindow",
] }

# DateTime
chrono = "0.4"
chrono-tz = "0.10"

# File walking
walkdir = "2"

# Home directory
dirs = "6"

# POSIX fork/setsid for daemon mode
[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
